# kawaii-emoji-messenger

./: CMakeLists.txt  KawaiiEmojiMessenger.pro  KawaiiEmojiMessenger.rc  KawaiiEmojiMessenger.sln  KawaiiEmojiMessenger.vcxproj  README.md  res.qrc  resource.h
data/: emojilist.txt
res/: kawaii-emoji-messenger.desktop
src/: browser.cpp  browser.h  comboemojicategory.cpp  comboemojicategory.h  cookiejar.cpp  cookiejar.h  dialogabout.cpp  dialogabout.h  dialogsetting.cpp  dialogsetting.h  emojimanager.cpp  emojimanager.h  frameemoji.cpp  frameemoji.h  globals.h  listwidgetemoji.cpp  listwidgetemoji.h  main.cpp  mainwindow.cpp  mainwindow.h  trayicon.cpp  trayicon.h  updatechecker.cpp  whereiam.cpp  whereiam.h
ui/: dialogabout.ui  dialogsetting.ui  emojipopup.ui  frameemoji.ui  mainwindow.ui
